2024-11-07  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.0-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha04: Nail Biter';git push
	git tag -a 5.3.0-alpha04 -m 'fxm';git push --tags

	* Fix allocation dimension for frc_landunit, now works on ne30 datasets

2024-11-06  Charlie Zender  <zender@uci.edu>

	* ncremap squelch SGS normalization WARNING due to landfrac in EAMxx files

2024-11-05  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.0-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha03: Slow Horses';git push
	git tag -a 5.3.0-alpha03 -m 'ncks: S1D mecp1 soil, frc_column, frc_landunit';git push --tags

	* Diagnostic frc_column and frc_landunit from restart files works

2024-11-04  Charlie Zender  <zender@uci.edu>

	* Add infrastructure to diagnose frc_column and frc_landunit from restart files

2024-11-01  Charlie Zender  <zender@uci.edu>

	* S1D insert additional MEC layer (index=0) that stores soil column data

2024-10-31  Charlie Zender  <zender@uci.edu>

	* S1D compute mec_nbr_out as maximum MEC index utilized (fixes ne30 bug)

2024-10-30  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.0-alpha02 release procedure:
	cd ~/nco;git commit -a -m "Version 5.3.0-alpha02: Widow's Peak";git push
	git tag -a 5.3.0-alpha02 -m 'ncks: S1D mec_idx fix, bare ground, rdr w/SNLSNO';git push --tags

	* Use SNLSNO to assign levsno, levsno1, and levtot snow layers to top-down (ocean-like) vertical grid

	* Restore PFT ityp = 0 = not vegetated to all output datasets

2024-10-24  Charlie Zender  <zender@uci.edu>

	* mec_idx now allows for < 10 MEC columns, possibly with gaps, in glacier/MEC landunits

2024-10-23  Charlie Zender  <zender@uci.edu>

	* ncclimo update examples

2024-10-22  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.0-alpha01 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.0-alpha01: Sanitize';git push